--- a/compose.yaml
+++ b/compose.yaml
@@ -2,14 +2,14 @@ services:
   dev:
     build:
       context: .
-      dockerfile: Dockerfile-dev
+      dockerfile: Dockerfile
       args:
         APPUSER: "appuser"
-    container_name: kubeconformserver-dev
+    container_name: cobra-test
     user: appuser
     working_dir: /home/appuser/src
     volumes:
-      - ./src:/home/appuser/src
+      - ./cli:/home/appuser/src
     tty: true
     stdin_open: true
     command: ["sh", "-c", "if [ ! -f go.mod ]; then go mod init pvectl; fi && go mod tidy && tail -f /dev/null"]
