--- a/compose.yaml
+++ b/compose.yaml
@@ -7,9 +7,32 @@ services:
         APPUSER: "appuser"
     container_name: cobra-test
     user: appuser
-    working_dir: /home/appuser/src
+    working_dir: /home/appuser/cli
     volumes:
-      - ./cli:/home/appuser/src
+      - ./cli:/home/appuser/cli
     tty: true
     stdin_open: true
     command: ["sh", "-c", "if [ ! -f go.mod ]; then go mod init pvectl; fi && go mod tidy && tail -f /dev/null"]
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
